<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kalinmarinov.dayplanner.views.CreateEventActivity">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:labelFor="@+id/createEditEventEditTextName" android:text="@string/event_model_label_name"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
              android:id="@+id/viewEventTextViewLabelName"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/empty_text_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewEventTextViewName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:fontFamily="monospace" android:textAlignment="center"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewLabelName"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/event_model_label_description"
              android:labelFor="@+id/createEditEventEditTextDescription"
              android:id="@+id/viewEventTextViewLabelDescription"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewName"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/viewEventTextViewDescription" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:fontFamily="monospace" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewLabelDescription" android:layout_marginTop="16dp"
            android:text="@string/empty_text_holder"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/event_model_label_start_date"
              android:labelFor="@+id/createEditEventEditTextStartDate"
              android:id="@+id/viewEventTextLabelViewStartDate"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:layout_marginTop="24dp"
              app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewDescription"/>
    <TextView
            android:text="@string/empty_text_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewEventTextViewStartDate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:fontFamily="monospace" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/viewEventTextLabelViewStartDate" android:layout_marginTop="16dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/event_model_label_end_date"
              android:labelFor="@+id/createEditEventEditTextEndDate"
              android:id="@+id/viewEventTextViewLabelEndDate"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewStartDate"
    />
    <TextView
            android:text="@string/empty_text_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewEventTextViewEndDate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:fontFamily="monospace" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewLabelEndDate" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/view_event_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewEventButtonEdit" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/viewEventTextViewEndDate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"/>
    <Button
            android:text="@string/view_event_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewEventButtonDelete"
            app:layout_constraintStart_toEndOf="@+id/viewEventButtonEdit" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            app:layout_constraintTop_toTopOf="@+id/viewEventButtonEdit"/>
</android.support.constraint.ConstraintLayout>
